[gd_scene load_steps=4 format=3 uid="uid://cyamtcha0a32a"]

[ext_resource type="Script" path="res://scripts/joystick.gd" id="1_25lut"]
[ext_resource type="Texture2D" uid="uid://jc6gtuckjik0" path="res://assets/images/joystick-pad.png" id="2_x3nie"]
[ext_resource type="Texture2D" uid="uid://bw7ov6hgtxxg8" path="res://assets/images/joystick-button.png" id="3_ndjbu"]

[node name="Joystick" type="Node2D"]
script = ExtResource("1_25lut")

[node name="PadSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_x3nie")

[node name="ButtonSprite" type="Sprite2D" parent="."]
modulate = Color(0.874305, 0.234796, 0.277674, 1)
texture = ExtResource("3_ndjbu")

[node name="StrengthLabel" type="Label" parent="."]
visible = false
offset_left = 98.0
offset_top = -35.0
offset_right = 174.0
offset_bottom = -12.0
text = "Strength: "

[node name="DirectionLabel" type="Label" parent="."]
visible = false
offset_left = 98.0
offset_top = -16.0
offset_right = 178.0
offset_bottom = 7.0
text = "Direction: "

[node name="PositionLabel" type="Label" parent="."]
visible = false
offset_left = 98.0
offset_top = 3.0
offset_right = 178.0
offset_bottom = 26.0
text = "Position: "
